--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -107,7 +107,7 @@
                 <div class="two columns" style="text-align:center;"><b>Attribute</b></div>
                 <div class="two columns" style="text-align:center;"><b>Bonus</b></div>
             </div>
-            % for (attribute, attribute_defense) in content["attributes"].iteritems():
+            % for (attribute, attribute_defense) in content["attributes"].items():
             <div class="row">
                 <div class="offset-by-three two columns" style="text-align:center;">{{attribute_defense}}</div>
                 <div class="two columns" style="text-align:center;">{{attribute.title()}}</div>
