--- a/lawbreaker/web/templates/404.html
+++ b/lawbreaker/web/templates/404.html
@@ -10,15 +10,15 @@
         <meta property="og:image:width" content="370" />
         <meta property="og:image:height" content="370" />
 
-        <link rel="preload" href="{{ url_for('static', filename='css/font.css') }}" as="style">
+        <link rel="preload" href="{{ url_for('static', filename='css/font.css') }}" as="style" />
 
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/normalize.min.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/skeleton.min.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/print.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font.css') }}" />
 
-        <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet" />
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
     </head>
     <body style="margin:100px;font-family: 'Crimson Text', serif !important;">
         <div class="container">
