--- a/lawbreaker/web/templates/index.html
+++ b/lawbreaker/web/templates/index.html
@@ -18,15 +18,15 @@
         <meta property="og:image:width" content="370" />
         <meta property="og:image:height" content="370" />
 
-        <link rel="preload" href="{{ url_for('static', filename='css/font.css') }}" as="style">
-        <link rel="preload" href="{{ url_for('static', filename='images/Konrad_I_Mazowiecki.jpg') }}" as="image">
+        <link rel="preload" href="{{ url_for('static', filename='css/font.css') }}" as="style" />
+        <link rel="preload" href="{{ url_for('static', filename='images/Konrad_I_Mazowiecki.jpg') }}" as="image" />
 
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/normalize.min.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/skeleton.min.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/print.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font.css') }}" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text">
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text" />
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
     </head>
     <body style="font-family: 'Crimson Text', serif !important;font-size:1.8em;margin-top:10px;">
         <div class="container">
